Prep data for MLA

--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "478d05bd-036f-4bbd-94a3-5e8a8dbbecce",
+   "execution_count": 2,
+   "id": "dd530e9c",
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ec1cad08-e994-49a9-afed-499465dcbc28",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c6975ae4",
    "metadata": {},
    "outputs": [],
@@ -59,26 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7df6c3cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_9273/459406077.py:15: DeprecationWarning: Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata. Use the filter argument to control this behavior.\n",
-      "  housing_tgz.extractall(path=housing_path)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fetch_housing_data()"
+    "# fetch_housing_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3402de5c-cdf8-4fa5-8bf1-0c1053c36b59",
    "metadata": {},
    "outputs": [
@@ -201,7 +192,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "92256b56",
    "metadata": {},
    "outputs": [
@@ -247,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "89e144c7",
    "metadata": {},
    "outputs": [
@@ -263,7 +254,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ac79db41",
    "metadata": {},
    "outputs": [
@@ -443,7 +434,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "5d05b5dc",
    "metadata": {},
    "outputs": [
