--- a/Housing_test_data.ipynb
+++ b/Housing_test_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +43,12 @@
    "source": [
     "from importnb import Notebook\n",
     "with Notebook():\n",
-    "    import Housing\n"
+    "    import Housing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +58,13 @@
     "    shuffled_indices = np.random.permutation(len(data))\n",
     "    test_set_size = int(len(data) * test_ratio)\n",
     "    test_indices = shuffled_indices[:test_set_size]\n",
-    "    train_indices = shuffled_indices[test_set_size:]    return data.iloc[train_indices], data.iloc[test_indices]"
+    "    train_indices = shuffled_indices[test_set_size:]\n",
+    "    return data.iloc[train_indices], data.iloc[test_indices]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,56 +112,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Option 2\n",
     "# build a unique identifier using the most stable features\n",
     "# example: latitude and longitude\n",
-    "housing_with_id[\"id\"] = housing[\"longitude\"] * 1000 + housing[\"latitude\"]       #using has\n",
-    "train_set, test_set = split_train_test_by_id(housing_with_id, 0.2, \"index\")"
+    "\n",
+    "# housing_with_id[\"id\"] = housing[\"longitude\"] * 1000 + housing[\"latitude\"]       #using has\n",
+    "# train_set, test_set = split_train_test_by_id(housing_with_id, 0.2, \"index\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train_test_split from scikit-learn does the same thing as split_train_test\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.model_selection import train_test_split\n",
     "\n",
-    "train_set, test_set = train_test_split(housing, test_size=0.2, random_state=42)"
+    "# train_set, test_set = train_test_split(housing, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_14661/238931313.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  housing[\"income_cat\"].where(housing[\"income_cat\"] < 5, 5.0, inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "housing[\"income_cat\"] = np.ceil(housing[\"median_income\"] / 1.5)\n",
-    "housing[\"income_cat\"].where(housing[\"income_cat\"] < 5, 5.0, inplace=True)"
+    "housing[\"income_cat\"] = housing[\"income_cat\"].where(housing[\"income_cat\"] < 5, 5.0)\n",
+    "# alternative \n",
+    "# housing.loc[housing[\"income_cat\"] >= 5, \"income_cat\"] = 5.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +179,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
